--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 .body-swiftmall{
-    background-image:url('/image/background.jpg');
+    background-image: url('../image/background.jpg');
 }
 
 .logo{
