--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 /* Body styles */
-.body-swiftmall {
+.body-Mokesell {
     background-image: url('../image/background.jpg'); /* Set the background image */
     background-size: cover;
     background-position: center;
@@ -45,6 +45,7 @@
     margin-bottom: 20px;
     color: #333;
 }
+
 .google-btn {
     display: flex;
     justify-content: center;
@@ -97,22 +98,30 @@
     margin-left: 8px;
 }
 
-
-/* Style the text inside the login box */
-.login p {
-    display:flex;
+.login-btn {
+    display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
+    width: 100%;
+    max-width: 350px;  /* Make the button responsive */
+    background-color: #e1d7d6; /* Google red for email */
+    color: rgb(0, 0, 0);
+    padding: 12px;
+    margin-bottom: 20px; /* Space below the email button */
+    border-radius: 5px;
+    cursor: pointer;
     font-size: 16px;
-    color: #555;
-    margin: 10px 0;
-    cursor: pointer; /* Make text feel clickable */
+    font-weight: bold;
+
 }
 
+.login-btn:hover {
+    background-color: #b6aead; /* Darker red when hovering */
+    text-decoration: underline; /* Add underline effect */
+}
 
-.login p:hover {
-    text-decoration: underline; /* Add hover effect to text */
+.login-btn span {
+    margin-left: 8px;
 }
 
 /* Style the footer */
@@ -126,6 +135,18 @@
 .signup a {
     color: #3498db;
     text-decoration: none;
+}
+
+.nav-bar {
+    font-family:Arial, sans-serif;
+    display:flex;
+    font-weight: bold;
+    justify-content: space-around;
+    background-color: black;
+    color: white;
+    align-items: center;
+    width: auto;
+    padding: 10px;
 }
 
 
