code for the contact ys page

--- a/style/style.css
+++ b/style/style.css
@@ -137,4 +137,43 @@
     text-decoration: none;
 }
 
+.navbar {
+    font-family:Arial, sans-serif;
+    display:flex;
+    font-weight: bold;
+    justify-content: space-around;
+    background-color: rgb(66, 6, 122);
+    color: rgb(255, 255, 255);
+    align-items: center;
+    width: auto;
+    padding: 10px;
+}
 
+.bodycon{
+    padding:0;
+    margin:0;
+}
+
+.logo-nav{
+    display:flex;
+    margin:0;
+}
+
+.logo-nav h1{
+    font-family: "Inter", serif;
+    font-weight: 900;
+    font-style: italic;
+    color: white;
+    font-size: 30px;
+}
+
+.button{
+    color:white;
+    text-decoration: none;
+}
+
+.slogan-contact {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+}
