--- a/style/login.css
+++ b/style/login.css
@@ -1,7 +1,7 @@
 /*login form */
 /* Body Styling */
 body {
-    background-color: #f8f9fa;
+    background-color: rgb(66, 6, 122);
     font-family: Arial, sans-serif;
 }
   
@@ -31,7 +31,7 @@ body {
     background-color: #ffffff;
     padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.5);
 }
   
   /* Form Title */
