put some comment

--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,7 @@
 .email-btn span {
     margin-left: 8px;
 }
-
+/*login button box */
 .login-btn {
     display: flex;
     justify-content: center;
