--- a/style/login.css
+++ b/style/login.css
@@ -31,7 +31,7 @@ body {
     background-color: #ffffff;
     padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 2px 10px rgba(255, 255, 255, 1);
 }
   
   /* Form Title */
@@ -72,7 +72,7 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
-  
+  /*buttonhover*/ 
   .btn-custom:hover {
     background-color: #0056b3;
 }
