--- a/style/spin_wheel.css
+++ b/style/spin_wheel.css
@@ -82,3 +82,13 @@
     color: #202020;
     font-weight: 500;
   }
+
+  /* For smaller screens */
+  @media screen and (max-width: 768px) {
+    .wrapper {
+      font-size: 12px;
+    }
+    img {
+      right: -5%;
+    }
+  }
