--- a/style/home.css
+++ b/style/home.css
@@ -17,8 +17,8 @@ body {
 
 /* Navbar */
 .navbar {
-  background: white;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+  background: rgb(66, 6, 122);
+  box-shadow: 0 4px 6px -1px rgb(0, 0, 0, 0.5);
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
@@ -32,6 +32,14 @@ body {
   transition: transform 0.3s ease;
 }
 
+.logo-nav h1{
+  font-family: "Inter", serif;
+  font-weight: 900;
+  font-style: italic;
+  color: white;
+  font-size: 30px;
+}
+
 .logo-nav:hover {
   transform: scale(1.05);
 }
@@ -42,7 +50,7 @@ body {
 }
 
 .button {
-  color: var(--dark);
+  color: var(--light);
   padding: 0.5rem 1.5rem;
   border-radius: 9999px;
   transition: all 0.3s ease;
