--- a/style/home.css
+++ b/style/home.css
@@ -253,9 +253,9 @@ body {
   display: block;
   margin: 2rem auto;
   padding: 1rem 2rem;
-  background: var(--primary);
-  color: white;
-  border: none;
+  background: var(--light);
+  color: rgb(0, 0, 0);
+  border: 2px solid var(--primary);
   border-radius: 10px;
   font-size: 1.2rem;
   cursor: pointer;
@@ -263,7 +263,8 @@ body {
 }
 
 .create-listing-btn:hover {
-  background: var(--secondary);
+  background: var(--primary);
+  color:white;
 }
 
 /* Category Selection */
