change hover effect color for the social media buttons

--- a/style/followus.css
+++ b/style/followus.css
@@ -122,8 +122,8 @@
   
   .instagram:hover { background: #fccefd; }
   .twitter:hover { background: #c4e7ff; }
-  .youtube:hover { background: #fccefd; }
-  .tiktok:hover { background: #c4e7ff; }
+  .youtube:hover { background: #fdcece; }
+  .tiktok:hover { background: #caffc4; }
   
   .footer-text {
     color: #4a5568;
