edit the buttom bar for home page and add the image for the google play and app store lastly edit the create ,html and javascreipt

--- a/style/create.css
+++ b/style/create.css
@@ -114,6 +114,11 @@
     text-align: center;
     margin-top: 4rem;
   }
+
+  .bottom-bar-content h2{
+    align-items: center;
+    color:white;
+  }
   
   .app-buttons {
     display: flex;
