added a notification feature for chat. but it is not fully implemented yet.

--- a/style/chat.css
+++ b/style/chat.css
@@ -313,6 +313,30 @@ body {
     color: var(--text-secondary);
 }
 
+/* Add to chat.css */
+.unread-indicator {
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.chat-user {
+    position: relative;
+    padding-right: 25px;
+}
+
+/* Navbar notification badge */
+.unread-badge {
+    color: red;
+    font-size: 12px;
+    margin-left: 5px;
+    vertical-align: super;
+}
+
 /* Adjustments for smaller screens */
 @media screen and (max-width: 768px) {
     .chat-container {
