--- a/style/home.css
+++ b/style/home.css
@@ -316,9 +316,10 @@ body {
 }
 
 .category-item img {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 95px;
   margin-bottom: 0.5rem;
+  border-radius: 100%;
 }
 
 
