--- a/style/home.css
+++ b/style/home.css
@@ -221,6 +221,17 @@ body {
   margin: 0 auto;
 }
 
+.no-results {
+  text-align: center;
+  padding: 2rem;
+  margin: 2rem auto;
+  background: rgb(255, 225, 225);
+  border-radius: 1rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  max-width: 600px;
+  display: none; /* Hidden by default */
+}
+
 #searchInput {
   width: 100%;
   padding: 1rem 2.5rem;
